# tools-programmer-homework

./: Cargo.toml
src/: format.rs  lib.rs  main.rs  server.rs
src/disasm/: mod.rs  mos6502.rs  risc_v.rs  x86.rs
test-bin/mos6502/: test1.out  test2.out
